Made code look nicer

--- a/code.ipynb
+++ b/code.ipynb
@@ -2,8 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 383,
+   "execution_count": 69,
    "id": "4e203b59",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Import pandas and numpy\n",
+    "import pandas as pd\n",
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "id": "bc438665",
    "metadata": {},
    "outputs": [
     {
@@ -138,23 +150,20 @@
        "4     Sequoia Union High     NaN  "
       ]
      },
-     "execution_count": 383,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "import pandas as pd\n",
-    "import numpy as np\n",
-    "\n",
-    "file = 'search_results_superintendent_1.csv'\n",
+    "file = 'data.csv'\n",
     "df = pd.read_csv(file)\n",
     "df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 384,
+   "execution_count": 71,
    "id": "6f4c939d",
    "metadata": {},
    "outputs": [
@@ -167,7 +176,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 384,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -178,7 +187,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 385,
+   "execution_count": 72,
+   "id": "0990721b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['Employee Name', 'Job Title', 'Base Pay', 'Overtime Pay', 'Other Pay',\n",
+       "       'Benefits', 'Total Pay & Benefits', 'Year', 'Notes', 'Agency',\n",
+       "       'Status'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 72,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "################################ DATA CLEANING ############################################\n",
+    "\n",
+    "# Rename the column names; stripping the whitespace\n",
+    "for i in df.columns:\n",
+    "    df.rename(columns={i:i.strip()}, inplace=True)\n",
+    "\n",
+    "df.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
    "id": "036bf81e",
    "metadata": {},
    "outputs": [
@@ -196,21 +235,21 @@
        "Assistant Superintendent, Pupil Services &amp; Selpa      1\n",
        "Assistant Superintendent-Edser                            1\n",
        "Assistant Superintendent Of Instructional Services        1\n",
-       "Name:  Job Title, Length: 255, dtype: int64"
+       "Name: Job Title, Length: 255, dtype: int64"
       ]
      },
-     "execution_count": 385,
+     "execution_count": 73,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df[' Job Title'].value_counts()"
+    "df['Job Title'].value_counts()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 386,
+   "execution_count": 74,
    "id": "bd1db5ec",
    "metadata": {},
    "outputs": [
@@ -398,18 +437,19 @@
        "      dtype=object)"
       ]
      },
-     "execution_count": 386,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df[' Job Title'].unique()"
+    "# Find school related superintedent jobs only\n",
+    "df['Job Title'].unique()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 387,
+   "execution_count": 68,
    "id": "f8cc561b",
    "metadata": {},
    "outputs": [
@@ -419,25 +459,83 @@
        "(490, 10)"
       ]
      },
-     "execution_count": 387,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "titles = ['Superintendent', 'Superintendent/President',\n",
-    "       'Superintendent Of Schools', 'District Superintendent',\n",
-    "       'Superintendent President', 'President/Superintendent',\n",
-    "       'County Superintendent Of Schl', 'Superintendent-President', 'Superintendent-District']\n",
+    "# Create list with education related superintendents\n",
+    "titles = [\n",
+    "        'Superintendent', \n",
+    "        'Superintendent/President',\n",
+    "        'Superintendent Of Schools', \n",
+    "        'District Superintendent',\n",
+    "        'Superintendent President', \n",
+    "        'President/Superintendent',\n",
+    "        'County Superintendent Of Schl', \n",
+    "        'Superintendent-President', \n",
+    "        'Superintendent-District'\n",
+    "        ]\n",
     "\n",
-    "df = df[df[' Job Title'].isin(titles)].reset_index().drop(columns=['index'])\n",
-    "df.drop(columns= ' Job Title', axis=1, inplace=True)\n",
+    "\n",
+    "df = df[df['Job Title'].isin(titles)].reset_index().drop(columns=['index'])\n",
+    "\n",
+    "\n",
+    "df.drop(columns= 'Job Title', axis=1, inplace=True)\n",
     "df.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 388,
+   "execution_count": 77,
+   "id": "b6d6a169",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1001, 10)"
+      ]
+     },
+     "execution_count": 77,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Create list with education related superintendents\n",
+    "titles = [\n",
+    "        'Superintendent', \n",
+    "        'Superintendent/President',\n",
+    "        'Superintendent Of Schools', \n",
+    "        'District Superintendent',\n",
+    "        'Superintendent President', \n",
+    "        'President/Superintendent',\n",
+    "        'County Superintendent Of Schl', \n",
+    "        'Superintendent-President', \n",
+    "        'Superintendent-District'\n",
+    "        ]\n",
+    "\n",
+    "\n",
+    "df['Job Title'].isin(titles).reset_index().drop(columns=['index'], inplace=True)\n",
+    "\n",
+    "\n",
+    "df.drop(columns= 'Job Title', axis=1, inplace=True)\n",
+    "df.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "beecb17e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
    "id": "3af35fa9",
    "metadata": {},
    "outputs": [
@@ -450,7 +548,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 388,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -461,7 +559,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 389,
+   "execution_count": 19,
    "id": "22a429cc",
    "metadata": {},
    "outputs": [
@@ -473,7 +571,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 389,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -484,7 +582,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 390,
+   "execution_count": 20,
    "id": "8606a9b0",
    "metadata": {},
    "outputs": [],
@@ -494,7 +592,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 391,
+   "execution_count": 21,
    "id": "5d3ce968",
    "metadata": {},
    "outputs": [
@@ -505,7 +603,7 @@
        "Name:  Year, dtype: int64"
       ]
      },
-     "execution_count": 391,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -516,7 +614,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 392,
+   "execution_count": 22,
    "id": "6c7a3fcc",
    "metadata": {},
    "outputs": [],
@@ -526,7 +624,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 393,
+   "execution_count": 23,
    "id": "ef1ebe0b",
    "metadata": {},
    "outputs": [
@@ -538,7 +636,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 393,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -549,7 +647,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 394,
+   "execution_count": 24,
    "id": "b0e52522",
    "metadata": {},
    "outputs": [
@@ -559,7 +657,7 @@
        "Series([], dtype: int64)"
       ]
      },
-     "execution_count": 394,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -570,7 +668,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 395,
+   "execution_count": 25,
    "id": "f01f8e83",
    "metadata": {},
    "outputs": [
@@ -588,7 +686,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 395,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -599,7 +697,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 396,
+   "execution_count": 26,
    "id": "06ff3382",
    "metadata": {},
    "outputs": [
@@ -609,7 +707,7 @@
        "490"
       ]
      },
-     "execution_count": 396,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -620,7 +718,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 397,
+   "execution_count": 27,
    "id": "08879ae1",
    "metadata": {},
    "outputs": [
@@ -812,7 +910,7 @@
        "[490 rows x 8 columns]"
       ]
      },
-     "execution_count": 397,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -823,7 +921,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 398,
+   "execution_count": 28,
    "id": "dbe50c01",
    "metadata": {},
    "outputs": [
@@ -833,7 +931,7 @@
        "'Craig M Guensler'"
       ]
      },
-     "execution_count": 398,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -844,7 +942,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 399,
+   "execution_count": 29,
    "id": "1c9f682a",
    "metadata": {},
    "outputs": [
@@ -916,7 +1014,7 @@
        "257              293031.72  Wheatland School District     NaN  "
       ]
      },
-     "execution_count": 399,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -927,7 +1025,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 400,
+   "execution_count": 30,
    "id": "93f5eaba",
    "metadata": {},
    "outputs": [
@@ -1012,7 +1110,7 @@
        "265              290868.77   Lincoln Unified     NaN  "
       ]
      },
-     "execution_count": 400,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1023,7 +1121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 401,
+   "execution_count": 31,
    "id": "54726299",
    "metadata": {},
    "outputs": [
@@ -1044,7 +1142,7 @@
        "Name: Employee Name, Length: 485, dtype: int64"
       ]
      },
-     "execution_count": 401,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1055,7 +1153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 402,
+   "execution_count": 32,
    "id": "7bb3146f",
    "metadata": {},
    "outputs": [],
@@ -1068,7 +1166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 403,
+   "execution_count": 33,
    "id": "b7f53ded",
    "metadata": {},
    "outputs": [
@@ -1140,7 +1238,7 @@
        "383              252280.33         San Rafael City High     NaN  "
       ]
      },
-     "execution_count": 403,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1151,7 +1249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 404,
+   "execution_count": 34,
    "id": "7bfcc51a",
    "metadata": {},
    "outputs": [
@@ -1223,7 +1321,7 @@
        "479               226733.4  San Benito County Office of Education     NaN  "
       ]
      },
-     "execution_count": 404,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1234,7 +1332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 405,
+   "execution_count": 35,
    "id": "008e899a",
    "metadata": {},
    "outputs": [],
@@ -1244,7 +1342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 406,
+   "execution_count": 36,
    "id": "927f684a",
    "metadata": {},
    "outputs": [
@@ -1303,7 +1401,7 @@
        "479               226733.4  San Benito County Office of Education     NaN  "
       ]
      },
-     "execution_count": 406,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1314,7 +1412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 407,
+   "execution_count": 37,
    "id": "c848f3df",
    "metadata": {},
    "outputs": [
@@ -1324,7 +1422,7 @@
        "(489, 8)"
       ]
      },
-     "execution_count": 407,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1335,7 +1433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 408,
+   "execution_count": 38,
    "id": "b72c650b",
    "metadata": {},
    "outputs": [
@@ -1345,7 +1443,7 @@
        "489"
       ]
      },
-     "execution_count": 408,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1356,7 +1454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 409,
+   "execution_count": 39,
    "id": "de64fad1",
    "metadata": {},
    "outputs": [],
@@ -1366,7 +1464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 410,
+   "execution_count": 40,
    "id": "1a52b814",
    "metadata": {},
    "outputs": [
@@ -1534,7 +1632,7 @@
        "[489 rows x 6 columns]"
       ]
      },
-     "execution_count": 410,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1545,7 +1643,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 411,
+   "execution_count": 41,
    "id": "0a68b018",
    "metadata": {},
    "outputs": [],
@@ -1556,7 +1654,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 412,
+   "execution_count": 42,
    "id": "30223904",
    "metadata": {},
    "outputs": [
@@ -1568,7 +1666,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 412,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1579,7 +1677,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 413,
+   "execution_count": 43,
    "id": "eae2a70c",
    "metadata": {},
    "outputs": [
@@ -1591,22 +1689,16 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 413,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "# Rename columns\n",
-    "for i in df.columns:\n",
-    "    df.rename(columns={i:i.strip()}, inplace=True)\n",
-    "\n",
-    "df.columns"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 416,
+   "execution_count": 44,
    "id": "8559ff67",
    "metadata": {},
    "outputs": [
@@ -1625,7 +1717,7 @@
        "Name: Overtime Pay, dtype: int64"
       ]
      },
-     "execution_count": 416,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1636,7 +1728,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 417,
+   "execution_count": 45,
    "id": "ad2abd3e",
    "metadata": {},
    "outputs": [
@@ -1652,7 +1744,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 417,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1663,7 +1755,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 419,
+   "execution_count": 46,
    "id": "2b78a3a5",
    "metadata": {},
    "outputs": [],
@@ -1677,7 +1769,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 440,
+   "execution_count": 47,
    "id": "a747b291",
    "metadata": {},
    "outputs": [],
@@ -1689,7 +1781,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 441,
+   "execution_count": 48,
    "id": "b182ecaa",
    "metadata": {},
    "outputs": [
@@ -1706,7 +1798,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 441,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1717,7 +1809,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 448,
+   "execution_count": 49,
    "id": "0ac1db20",
    "metadata": {},
    "outputs": [
@@ -1897,7 +1989,7 @@
        "[489 rows x 7 columns]"
       ]
      },
-     "execution_count": 448,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1908,7 +2000,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 451,
+   "execution_count": 50,
    "id": "e36f8c13",
    "metadata": {},
    "outputs": [],
@@ -1929,7 +2021,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 452,
+   "execution_count": 51,
    "id": "7336bda1",
    "metadata": {},
    "outputs": [
@@ -2109,7 +2201,7 @@
        "[489 rows x 7 columns]"
       ]
      },
-     "execution_count": 452,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2122,6 +2214,14 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "a5d826f7",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fafbb356",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2143,7 +2243,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
