--- a/coinbase-web-scraper.ipynb
+++ b/coinbase-web-scraper.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "db1fd8f0",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "d143231d",
    "metadata": {},
    "outputs": [],
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "id": "a7cdac93",
    "metadata": {},
    "outputs": [
@@ -51,33 +51,33 @@
        " <div class=\"sc-1teo54s-2 fZIJcI\" data-nosnippet=\"true\"><div class=\"sc-1teo54s-3 etWhyV\">2</div><p class=\"sc-1eb5slv-0 gGIpIK coin-item-symbol\" color=\"text3\" font-size=\"1\">ETH</p></div>,\n",
        " <div class=\"sc-1teo54s-3 etWhyV\">2</div>,\n",
        " <p class=\"sc-1eb5slv-0 gGIpIK coin-item-symbol\" color=\"text3\" font-size=\"1\">ETH</p>,\n",
-       " <td><div class=\"sc-131di3y-0 cLgOOr\"><a class=\"cmc-link\" href=\"/currencies/ethereum/markets/\"><span>$1,898.99</span></a></div></td>,\n",
-       " <div class=\"sc-131di3y-0 cLgOOr\"><a class=\"cmc-link\" href=\"/currencies/ethereum/markets/\"><span>$1,898.99</span></a></div>,\n",
-       " <a class=\"cmc-link\" href=\"/currencies/ethereum/markets/\"><span>$1,898.99</span></a>,\n",
-       " <span>$1,898.99</span>,\n",
-       " <td style=\"text-align:right\"><span class=\"sc-15yy2pl-0 hzgCfk\"><span class=\"icon-Caret-down\"></span>0.14<!-- -->%</span></td>,\n",
-       " <span class=\"sc-15yy2pl-0 hzgCfk\"><span class=\"icon-Caret-down\"></span>0.14<!-- -->%</span>,\n",
-       " <span class=\"icon-Caret-down\"></span>,\n",
-       " <td style=\"text-align:right\"><span class=\"sc-15yy2pl-0 hzgCfk\"><span class=\"icon-Caret-down\"></span>1.59<!-- -->%</span></td>,\n",
-       " <span class=\"sc-15yy2pl-0 hzgCfk\"><span class=\"icon-Caret-down\"></span>1.59<!-- -->%</span>,\n",
-       " <span class=\"icon-Caret-down\"></span>,\n",
-       " <td style=\"text-align:right\"><span class=\"sc-15yy2pl-0 kAXKAX\"><span class=\"icon-Caret-up\"></span>7.03<!-- -->%</span></td>,\n",
-       " <span class=\"sc-15yy2pl-0 kAXKAX\"><span class=\"icon-Caret-up\"></span>7.03<!-- -->%</span>,\n",
+       " <td><div class=\"sc-131di3y-0 cLgOOr\"><a class=\"cmc-link\" href=\"/currencies/ethereum/markets/\"><span>$1,837.96</span></a></div></td>,\n",
+       " <div class=\"sc-131di3y-0 cLgOOr\"><a class=\"cmc-link\" href=\"/currencies/ethereum/markets/\"><span>$1,837.96</span></a></div>,\n",
+       " <a class=\"cmc-link\" href=\"/currencies/ethereum/markets/\"><span>$1,837.96</span></a>,\n",
+       " <span>$1,837.96</span>,\n",
+       " <td style=\"text-align:right\"><span class=\"sc-15yy2pl-0 kAXKAX\"><span class=\"icon-Caret-up\"></span>0.39<!-- -->%</span></td>,\n",
+       " <span class=\"sc-15yy2pl-0 kAXKAX\"><span class=\"icon-Caret-up\"></span>0.39<!-- -->%</span>,\n",
        " <span class=\"icon-Caret-up\"></span>,\n",
-       " <td style=\"text-align:right\"><p class=\"sc-1eb5slv-0 hykWbK\" color=\"text\" font-size=\"1\" style=\"white-space:nowrap\"><span class=\"sc-1ow4cwt-0 iosgXe\">$231.63B</span><span class=\"sc-1ow4cwt-1 ieFnWP\" data-nosnippet=\"true\">$231,631,492,564</span></p></td>,\n",
-       " <p class=\"sc-1eb5slv-0 hykWbK\" color=\"text\" font-size=\"1\" style=\"white-space:nowrap\"><span class=\"sc-1ow4cwt-0 iosgXe\">$231.63B</span><span class=\"sc-1ow4cwt-1 ieFnWP\" data-nosnippet=\"true\">$231,631,492,564</span></p>,\n",
-       " <span class=\"sc-1ow4cwt-0 iosgXe\">$231.63B</span>,\n",
-       " <span class=\"sc-1ow4cwt-1 ieFnWP\" data-nosnippet=\"true\">$231,631,492,564</span>,\n",
-       " <td style=\"text-align:right\"><div class=\"sc-16r8icm-0 j3nwcd-0 cRcnjD\"><a class=\"cmc-link\" href=\"/currencies/ethereum/markets/\"><p class=\"sc-1eb5slv-0 hykWbK font_weight_500\" color=\"text\" font-size=\"1\">$19,756,771,322</p></a><div data-nosnippet=\"true\"><p class=\"sc-1eb5slv-0 etpvrL\" color=\"text2\" font-size=\"0\">10,403,847 ETH</p></div></div></td>,\n",
-       " <div class=\"sc-16r8icm-0 j3nwcd-0 cRcnjD\"><a class=\"cmc-link\" href=\"/currencies/ethereum/markets/\"><p class=\"sc-1eb5slv-0 hykWbK font_weight_500\" color=\"text\" font-size=\"1\">$19,756,771,322</p></a><div data-nosnippet=\"true\"><p class=\"sc-1eb5slv-0 etpvrL\" color=\"text2\" font-size=\"0\">10,403,847 ETH</p></div></div>,\n",
-       " <a class=\"cmc-link\" href=\"/currencies/ethereum/markets/\"><p class=\"sc-1eb5slv-0 hykWbK font_weight_500\" color=\"text\" font-size=\"1\">$19,756,771,322</p></a>,\n",
-       " <p class=\"sc-1eb5slv-0 hykWbK font_weight_500\" color=\"text\" font-size=\"1\">$19,756,771,322</p>,\n",
-       " <div data-nosnippet=\"true\"><p class=\"sc-1eb5slv-0 etpvrL\" color=\"text2\" font-size=\"0\">10,403,847 ETH</p></div>,\n",
-       " <p class=\"sc-1eb5slv-0 etpvrL\" color=\"text2\" font-size=\"0\">10,403,847 ETH</p>,\n",
-       " <td style=\"text-align:right\"><div class=\"sc-16r8icm-0 g5oqcc-0 drLITg\" style=\"cursor:\"><div class=\"sc-16r8icm-0 g5oqcc-1 eGQXzN\"><p class=\"sc-1eb5slv-0 kZlTnE\" color=\"text\" font-size=\"1\" font-weight=\"medium\">121,976,340 ETH</p></div></div></td>,\n",
-       " <div class=\"sc-16r8icm-0 g5oqcc-0 drLITg\" style=\"cursor:\"><div class=\"sc-16r8icm-0 g5oqcc-1 eGQXzN\"><p class=\"sc-1eb5slv-0 kZlTnE\" color=\"text\" font-size=\"1\" font-weight=\"medium\">121,976,340 ETH</p></div></div>,\n",
-       " <div class=\"sc-16r8icm-0 g5oqcc-1 eGQXzN\"><p class=\"sc-1eb5slv-0 kZlTnE\" color=\"text\" font-size=\"1\" font-weight=\"medium\">121,976,340 ETH</p></div>,\n",
-       " <p class=\"sc-1eb5slv-0 kZlTnE\" color=\"text\" font-size=\"1\" font-weight=\"medium\">121,976,340 ETH</p>,\n",
+       " <td style=\"text-align:right\"><span class=\"sc-15yy2pl-0 hzgCfk\"><span class=\"icon-Caret-down\"></span>2.19<!-- -->%</span></td>,\n",
+       " <span class=\"sc-15yy2pl-0 hzgCfk\"><span class=\"icon-Caret-down\"></span>2.19<!-- -->%</span>,\n",
+       " <span class=\"icon-Caret-down\"></span>,\n",
+       " <td style=\"text-align:right\"><span class=\"sc-15yy2pl-0 kAXKAX\"><span class=\"icon-Caret-up\"></span>0.45<!-- -->%</span></td>,\n",
+       " <span class=\"sc-15yy2pl-0 kAXKAX\"><span class=\"icon-Caret-up\"></span>0.45<!-- -->%</span>,\n",
+       " <span class=\"icon-Caret-up\"></span>,\n",
+       " <td style=\"text-align:right\"><p class=\"sc-1eb5slv-0 hykWbK\" color=\"text\" font-size=\"1\" style=\"white-space:nowrap\"><span class=\"sc-1ow4cwt-0 iosgXe\">$224.23B</span><span class=\"sc-1ow4cwt-1 ieFnWP\" data-nosnippet=\"true\">$224,234,352,805</span></p></td>,\n",
+       " <p class=\"sc-1eb5slv-0 hykWbK\" color=\"text\" font-size=\"1\" style=\"white-space:nowrap\"><span class=\"sc-1ow4cwt-0 iosgXe\">$224.23B</span><span class=\"sc-1ow4cwt-1 ieFnWP\" data-nosnippet=\"true\">$224,234,352,805</span></p>,\n",
+       " <span class=\"sc-1ow4cwt-0 iosgXe\">$224.23B</span>,\n",
+       " <span class=\"sc-1ow4cwt-1 ieFnWP\" data-nosnippet=\"true\">$224,234,352,805</span>,\n",
+       " <td style=\"text-align:right\"><div class=\"sc-16r8icm-0 j3nwcd-0 cRcnjD\"><a class=\"cmc-link\" href=\"/currencies/ethereum/markets/\"><p class=\"sc-1eb5slv-0 hykWbK font_weight_500\" color=\"text\" font-size=\"1\">$19,135,464,683</p></a><div data-nosnippet=\"true\"><p class=\"sc-1eb5slv-0 etpvrL\" color=\"text2\" font-size=\"0\">10,411,260 ETH</p></div></div></td>,\n",
+       " <div class=\"sc-16r8icm-0 j3nwcd-0 cRcnjD\"><a class=\"cmc-link\" href=\"/currencies/ethereum/markets/\"><p class=\"sc-1eb5slv-0 hykWbK font_weight_500\" color=\"text\" font-size=\"1\">$19,135,464,683</p></a><div data-nosnippet=\"true\"><p class=\"sc-1eb5slv-0 etpvrL\" color=\"text2\" font-size=\"0\">10,411,260 ETH</p></div></div>,\n",
+       " <a class=\"cmc-link\" href=\"/currencies/ethereum/markets/\"><p class=\"sc-1eb5slv-0 hykWbK font_weight_500\" color=\"text\" font-size=\"1\">$19,135,464,683</p></a>,\n",
+       " <p class=\"sc-1eb5slv-0 hykWbK font_weight_500\" color=\"text\" font-size=\"1\">$19,135,464,683</p>,\n",
+       " <div data-nosnippet=\"true\"><p class=\"sc-1eb5slv-0 etpvrL\" color=\"text2\" font-size=\"0\">10,411,260 ETH</p></div>,\n",
+       " <p class=\"sc-1eb5slv-0 etpvrL\" color=\"text2\" font-size=\"0\">10,411,260 ETH</p>,\n",
+       " <td style=\"text-align:right\"><div class=\"sc-16r8icm-0 g5oqcc-0 drLITg\" style=\"cursor:\"><div class=\"sc-16r8icm-0 g5oqcc-1 eGQXzN\"><p class=\"sc-1eb5slv-0 kZlTnE\" color=\"text\" font-size=\"1\" font-weight=\"medium\">122,001,848 ETH</p></div></div></td>,\n",
+       " <div class=\"sc-16r8icm-0 g5oqcc-0 drLITg\" style=\"cursor:\"><div class=\"sc-16r8icm-0 g5oqcc-1 eGQXzN\"><p class=\"sc-1eb5slv-0 kZlTnE\" color=\"text\" font-size=\"1\" font-weight=\"medium\">122,001,848 ETH</p></div></div>,\n",
+       " <div class=\"sc-16r8icm-0 g5oqcc-1 eGQXzN\"><p class=\"sc-1eb5slv-0 kZlTnE\" color=\"text\" font-size=\"1\" font-weight=\"medium\">122,001,848 ETH</p></div>,\n",
+       " <p class=\"sc-1eb5slv-0 kZlTnE\" color=\"text\" font-size=\"1\" font-weight=\"medium\">122,001,848 ETH</p>,\n",
        " <td style=\"text-align:right\"><a class=\"cmc-link\" href=\"/currencies/ethereum/?period=7d\"><img alt=\"ethereum-7d-price-graph\" class=\"h7vnx2-0 bCltOL isUp\" loading=\"lazy\" src=\"https://s3.coinmarketcap.com/generated/sparklines/web/7d/2781/1027.svg\"/></a></td>,\n",
        " <a class=\"cmc-link\" href=\"/currencies/ethereum/?period=7d\"><img alt=\"ethereum-7d-price-graph\" class=\"h7vnx2-0 bCltOL isUp\" loading=\"lazy\" src=\"https://s3.coinmarketcap.com/generated/sparklines/web/7d/2781/1027.svg\"/></a>,\n",
        " <img alt=\"ethereum-7d-price-graph\" class=\"h7vnx2-0 bCltOL isUp\" loading=\"lazy\" src=\"https://s3.coinmarketcap.com/generated/sparklines/web/7d/2781/1027.svg\"/>,\n",
@@ -87,7 +87,7 @@
        " <span class=\"icon-More-Vertical\"></span>]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
